2001-12-10  jacob berkman  <jacob@ximian.com>

	* glade/glade-bonobo.c: allow more values for boolean true

2001-12-09  James Henstridge  <james@daa.com.au>

	* bonobo/bonobo-ui-config-widget.c (widgets_init): use mnemonics
	for button labels here as well.

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_state):
	just call gtk_label_set_use_underline() to set up the mnemonic.

2001-12-07  jacob berkman  <jacob@ximian.com>

	* bonobo/Makefile.am: some fixes to generated files
	
	* bonobo/Makefile.am (libbonoboui.defs): forgot to add a rule for
	libbonoboui.defs

	* configure.in: look for glib-mkenums

2001-12-06  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-ui-toolbar.h (BonoboUIToolbarStyle): reformat so
	that glib-mkenums likes us

	* bonobo/bonobo-dock-layout.[ch]: make it a GObject rather than a
	GtkObject

	* bonobo/Makefile.am: add builtin type files

	* glade/glade-bonobo.c (dock_allow_floating): 
	(dock_item_set_shadow_type): handle some properties
	(dock_item_build): set the dock name
	(add_dock_item):
	(dock_build_children): ported from libglade 1
	(glade_module_register_widgets): tell glade about the new widgets
	we can do

2001-12-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* samples/compound-doc/bonobo-hello/Makefile.am:
	* samples/controls/Makefile.am: install sample servers in
	$(prefix)/lib/bonobo-2.0/samples, and added server.in.in files
	and needed Makefile rules for converting them to server.in

2001-12-04  Darin Adler  <darin@bentspoon.com>

	* bonobo/bonobo-ui-toolbar.c: (impl_destroy): Sink the tooltips
	rather than unrefing them.

2001-12-04  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-plug.c (bonobo_plug_expose_event):
	chain to parent.

2001-12-03  Laszlo Peter  <laca@ireland.sun.com>

	* bonobo/bonobo-plug.c:
	* bonobo/bonobo-socket.c:

	Fix some void functions returning values.

2001-11-30  Michael Meeks  <michael@ximian.com>

	* Version 1.107.0

2001-12-02  Seth Nickell  <snickell@stanford.edu>
