@@ -1,5 +1,7 @@
 2001-12-10  jacob berkman  <jacob@ximian.com>
 
+	* glade/glade-gnome.c (add_dock_item): fix dock item placement
+
 	* glade/glade-bonobo.c: allow more values for boolean true
 
 2001-12-09  James Henstridge  <james@daa.com.au>
